<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CyclingCommuter</string>
    <string name="welcome">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_zipcode">Enter Your Zipcode</string>
    <string name="button_finish">Finish</string>
    <string name="button_to_work_time">Set Time of Commute To Work</string>
    <string name="button_to_home_time">Set Time of Commute Back Home</string>
    <string name="title_activity_display_time_picker">DisplayTimePickerActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
